--- a/requirements.txt
+++ b/requirements.txt
@@ -11,9 +11,9 @@ python-dotenv
 beautifulsoup4
 lxml
 pillow
-langchain
-langchain-core
-langchain-google-genai
+langchain==0.2.14
+langchain-core==0.2.19
+langchain-google-genai==0.1.3
 google-generativeai
 openpyxl
 pyarrow
