--- a/requirements.txt
+++ b/requirements.txt
@@ -11,10 +11,10 @@ python-dotenv
 beautifulsoup4
 lxml
 pillow
-langchain==0.2.14
-langchain-core==0.2.19
-langchain-google-genai==0.1.3
-google-generativeai
+langchain==0.3.7
+langchain-core==0.3.15
+langchain-google-genai==2.0.9
+google-generativeai==0.8.3
 openpyxl
 pyarrow
 tabulate
