--- a/requirements.txt
+++ b/requirements.txt
@@ -1,26 +1,29 @@
-fastapi
-uvicorn[standard]
-python-multipart
-pandas
-numpy
-matplotlib
-seaborn
-networkx
-requests
-python-dotenv
-beautifulsoup4
-lxml
-pillow
+fastapi==0.115.0
+uvicorn[standard]==0.30.6
+python-multipart==0.0.9
+pandas==2.2.3
+numpy==1.26.4
+matplotlib==3.9.2
+seaborn==0.13.2
+networkx==3.3
+requests==2.32.3
+python-dotenv==1.0.1
+beautifulsoup4==4.12.3
+lxml==5.3.0
+pillow==10.4.0
+openpyxl==3.1.5
+pyarrow==17.0.0
+tabulate==0.9.0
+html5lib==1.1
+duckdb==1.1.3
+pytesseract==0.3.13
+playwright==1.48.0
+scikit-learn==1.5.2
+pdfplumber==0.11.5
 langchain==0.3.7
 langchain-core==0.3.15
 langchain-google-genai==2.0.9
 google-generativeai==0.8.3
-openpyxl
-pyarrow
-tabulate
-html5lib
-duckdb
-pytesseract
-playwright
-scikit-learn
-pdfplumber
+typing-extensions==4.12.2
+pydantic==2.9.2
+httpx==0.27.2
