--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,4 @@
+--no-cache-dir
 fastapi==0.115.0
 uvicorn[standard]==0.30.6
 python-multipart==0.0.9
@@ -20,9 +21,10 @@ pytesseract==0.3.13
 playwright==1.48.0
 scikit-learn==1.5.2
 pdfplumber==0.11.5
+# LangChain + Google AI integrations
 langchain==0.2.16
 langchain-google-genai==1.0.5
-google-generativeai==0.7.2
+google-generativeai==0.5.2
 typing-extensions==4.12.2
 pydantic==2.9.2
 httpx==0.27.2
